js executon context- square n function file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <script src="iife.js"></script>
+    <script src="./js execution context/squaren.js"></script>
 </body>
 </html>
