js call stack example 2 added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="iife.js"></script>
     <script src="./js execution context/squaren.js"></script>
+    <script src="./js execution context/js call stack-example.js"></script>
 </body>
 </html>
