this in arrow function inside an object example added

--- a/this-keyword/index.html
+++ b/this-keyword/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This Keyword</h1>
     <script src="this.js"></script>
+    <script src="this-arrow-function-call.js"></script>
 </body>
 </html>
