--- a/this-keyword/index.html
+++ b/this-keyword/index.html
@@ -9,6 +9,6 @@
     <h1>This Keyword</h1>
     <script src="this.js"></script>
     <script src="this-arrow-function-call.js"></script>
-    <script src="../this methods/"></script>
+    <script src="../this methods/this-call method.js"></script>
 </body>
 </html>
