Google search this- call method exapmle added, global object binding method example added

--- a/this-keyword/index.html
+++ b/this-keyword/index.html
@@ -10,5 +10,8 @@
     <script src="this.js"></script>
     <script src="this-arrow-function-call.js"></script>
     <script src="../this methods/this-call method.js"></script>
+    <script src="../this methods/global-object-binding.js"></script>
+    <script src="../this methods/this-bind method.js"></script>
+    <script src="../this methods/this-apply method.js"></script>
 </body>
 </html>
