errors of js examples added

--- a/this-keyword/index.html
+++ b/this-keyword/index.html
@@ -13,5 +13,6 @@
     <script src="../this methods/global-object-binding.js"></script>
     <script src="../this methods/this-bind method.js"></script>
     <script src="../this methods/this-apply method.js"></script>
+    <script src="../error-js/syntax-error.js"></script>
 </body>
 </html>
