--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="iife.js"></script>
     <script src="./js execution context/squaren.js"></script>
     <script src="./js execution context/js call stack-example.js"></script>
+    <script src="./error-js/try-catch-error.js"></script>
 </body>
 </html>
