error-object example added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="./js execution context/squaren.js"></script>
     <script src="./js execution context/js call stack-example.js"></script>
     <script src="./error-js/try-catch-error.js"></script>
+    <script src="./error-js/json-error-try_catch.js"></script>
+    <script src="./error-js/error-object.js"></script>
 </body>
 </html>
