--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>js class</h1>
     <script src="iife.js"></script>
     <script src="./js execution context/squaren.js"></script>
     <script src="./js execution context/js call stack-example.js"></script>
     <script src="./error-js/try-catch-error.js"></script>
     <script src="./error-js/json-error-try_catch.js"></script>
     <script src="./error-js/error-object.js"></script>
+    <script src="./object method/object-GroupBy.js"></script>
 </body>
 </html>
