--- a/dom/index.html
+++ b/dom/index.html
@@ -7,6 +7,14 @@
     <script defer src="dom1.js"></script>
 </head>
 <body>
-    <h1>DOMMM!!</h1>
+    <h1>DOMMM!! </h1>
+    <p id="para">khsahdjsckdznc djlsakj</p>
+    <div class="pn">11111111111111</div>
+    <div class="pn">22222222222222</div>
+    <div class="pn"></div>
+    <div class="pn"></div>
+    <div class="pn"></div>
+    <div class="pn"></div>
+    <div class="pn"></div>
 </body>
 </html>
