nested querySelector added

--- a/dom/index.html
+++ b/dom/index.html
@@ -9,9 +9,18 @@
 <body>
     <h1>DOMMM!! </h1>
     <p id="para">khsahdjsckdznc djlsakj</p>
+
+    <section id="sec">
+        <h2>Helooo DOmmm!!</h2>
+    </section>
+
     <div class="pn">11111111111111</div>
     <div class="pn">22222222222222</div>
-    <div class="pn"></div>
+    <div class="pn">
+        <a href="#">Portfolio page</a>
+        <a href="#" id="blogPage">Blog</a>
+        <a href="#">Business News</a>
+    </div>
     <div class="pn"></div>
     <div class="pn"></div>
     <div class="pn"></div>
