dom style change added

--- a/dom/index.html
+++ b/dom/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Class</title>
     <script defer src="dom1.js"></script>
+    <script defer src="/dom/change-dom.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -25,5 +26,10 @@
     <div class="pn"></div>
     <div class="pn"></div>
     <div class="pn"></div>
+
+
+    <!-- inner html -->
+     <h4>My Name is Julia</h4>
+     <button onclick = styleChange()>style change</button>
 </body>
 </html>
