create dom sample added

--- a/dom/index.html
+++ b/dom/index.html
@@ -6,6 +6,7 @@
     <title>DOM Class</title>
     <script defer src="dom1.js"></script>
     <script defer src="/dom/change-dom.js"></script>
+    <script defer src="/dom/create-inDom.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -31,5 +32,10 @@
     <!-- inner html -->
      <h4>My Name is Julia</h4>
      <button onclick = styleChange()>style change</button>
+
+     <!-- append -->
+    <section id="secAp">
+        <h2>Helooo DOmmm!!</h2>
+    </section>
 </body>
 </html>
