create-inDom example renamd and edited to create-append-in Dom

--- a/dom/index.html
+++ b/dom/index.html
@@ -34,8 +34,8 @@
      <button onclick = styleChange()>style change</button>
 
      <!-- append -->
-    <section id="secAp">
-        <h2>Helooo DOmmm!!</h2>
+    <section id="secAppend">
+        <h2 id="h2secAppend">Helooo DOmmm!!</h2>
     </section>
 </body>
 </html>
