drinks list using forEach() & createDocumentFragment(): in only JS

--- a/dom/index.html
+++ b/dom/index.html
@@ -7,6 +7,7 @@
     <script defer src="dom1.js"></script>
     <script defer src="/dom/change-dom.js"></script>
     <script defer src="/dom/create-inDom.js"></script>
+    <script defer src="/dom/drinks-withJS-.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
