user-input-add in list example added without random color as class vdo

--- a/dom/index.html
+++ b/dom/index.html
@@ -8,6 +8,7 @@
     <script defer src="/dom/change-dom.js"></script>
     <script defer src="/dom/create-inDom.js"></script>
     <script defer src="/dom/drinks-withJS-.js"></script>
+    <script defer src="/dom/user-input-add.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -38,5 +39,6 @@
     <section id="secAppend">
         <h2 id="h2secAppend">Helooo DOmmm!!</h2>
     </section>
+   
 </body>
 </html>
