Theory for DOM folder is added

--- a/dom/index.html
+++ b/dom/index.html
@@ -9,6 +9,7 @@
     <script defer src="/dom/create-inDom.js"></script>
     <script defer src="/dom/drinks-withJS-.js"></script>
     <script defer src="/dom/user-input-add.js"></script>
+    <script defer src="/dom/image-add.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -39,6 +40,8 @@
     <section id="secAppend">
         <h2 id="h2secAppend">Helooo DOmmm!!</h2>
     </section>
+    <!-- image add -->
+     <img src="" alt="">
    
 </body>
 </html>
