classList theory added, toggle button example added, css for toggle added

--- a/dom/index.html
+++ b/dom/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Class</title>
+    <link rel="stylesheet" href="style-dom.css">
     <script defer src="dom1.js"></script>
     <script defer src="/dom/change-dom.js"></script>
     <script defer src="/dom/create-inDom.js"></script>
     <script defer src="/dom/drinks-withJS-.js"></script>
     <script defer src="/dom/user-input-add.js"></script>
     <script defer src="/dom/image-add.js"></script>
+    <script defer src="/dom/toggle-btn.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -42,6 +44,14 @@
     </section>
     <!-- image add -->
      <img src="" alt="">
+
+     <!-- toggle btn -->
+      <!-- <div id="hola"> -->
+      <div id="greetingInSpain">
+        <p>Hola Mundo!!</p>
+        <button class="toggleBtn" onclick="holaOnClick()">
+hacer clic!</button>
+      </div>
    
 </body>
 </html>
