event listener example and theory added more

--- a/dom/index.html
+++ b/dom/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style-dom.css">
     <script defer src="dom1.js"></script>
     <script defer src="/dom/change-dom.js"></script>
-    <script defer src="/dom/create-inDom.js"></script>
+    <!-- <script defer src="/dom/create-inDom.js"></script> -->
+    <script defer src="/dom/create-append-inDom.js"></script>
     <script defer src="/dom/drinks-withJS-.js"></script>
     <script defer src="/dom/user-input-add.js"></script>
     <script defer src="/dom/image-add.js"></script>
     <script defer src="/dom/toggle-btn.js"></script>
+    <script defer src="/dom/event-listener.js"></script>
 </head>
 <body>
     <h1>DOMMM!! </h1>
@@ -51,6 +53,11 @@
         <button class="toggleBtn" onclick="holaOnClick()">
 hacer clic!</button>
       </div>
+
+      <!-- event listener -->
+       <button name="helloMe" id="el1" >Click me!</button>
+       <button name="helloMe12" id="el12" >Click me tooo plz!</button>
+       <button name="helloMeArrow" id="elArrow" >Click me tooo plz!</button>
    
 </body>
 </html>
