template creating & cloning added in dom tricks, appendChild & append  explanation in  text file added, chatgpt ans added

--- a/dom tricks/dom-tricks.html
+++ b/dom tricks/dom-tricks.html
@@ -28,6 +28,13 @@
         <li>li</li>
         <li>li</li>
     </ul>
+
+   <template id="myTemplate">
+    <div>
+        <h2> {{ title}} </h2>
+        <p> {{description}} </p>
+    </div>
+   </template>
     <script src="dom-tricks.js"></script>
 </body>
 </html>
