* all import: namespace objcet import + default import added

--- a/module/index.html
+++ b/module/index.html
@@ -10,5 +10,6 @@
     <script type="module" src="module-1.js"></script>
     <script type="module" src="module-2.js"></script>
     <script type="module" src="module-3.js"></script>
+    <script type="module" src="module-4.js"></script>
 </body>
 </html>
