combined import eg added

--- a/module/index.html
+++ b/module/index.html
@@ -11,5 +11,8 @@
     <script type="module" src="module-2.js"></script>
     <script type="module" src="module-3.js"></script>
     <script type="module" src="module-4.js"></script>
+    <script type="module" src="combined-export.js"></script>
+    <script type="module" src="combined-import.js"></script>
+    <script type="module" src="combined-export-2.js"></script>
 </body>
 </html>
