dynamic import added in module

--- a/module/index.html
+++ b/module/index.html
@@ -14,5 +14,11 @@
     <script type="module" src="combined-export.js"></script>
     <script type="module" src="combined-import.js"></script>
     <script type="module" src="combined-export-2.js"></script>
+   
+    <script type="module" src="dynamic-import.js"></script>
+     <script type="module" src="dynamic-export.js"></script>
+    <script type="module" src="dynamic-export2.js"></script>
+    <script type="module" src="dynamic-export-3-admin.js"></script>
+   
 </body>
 </html>
