--- a/module/index.html
+++ b/module/index.html
@@ -19,6 +19,7 @@
      <script type="module" src="dynamic-export.js"></script>
     <script type="module" src="dynamic-export2.js"></script>
     <script type="module" src="dynamic-export-3-admin.js"></script>
+    <script type="module" src="dynamic-import-iiffe.js"></script>
    
 </body>
 </html>
