multiple dynamic import added

--- a/module/index.html
+++ b/module/index.html
@@ -20,6 +20,10 @@
     <script type="module" src="dynamic-export2.js"></script>
     <script type="module" src="dynamic-export-3-admin.js"></script>
     <script type="module" src="dynamic-import-iiffe.js"></script>
+    <script type="module" src="multiple-dynamic-import.js"></script>
+    <script type="module" src="string.js"></script>
+    <script type="module" src="math.js"></script>
+
    
 </body>
 </html>
